# msqr

./: .gitignore  CMakeLists.txt  README.md  interpreter.h  main.cpp
src/: compiling_error.txt  interpreter.cpp  interpreter.h  main.cpp
